# highlight-lexer-comparison

./: .gitignore  README.md  example.py  index.html  pyproject.toml  test.html
assets/: github.css  highlight.css  prims.css  pygments.css  vscode.css
css/: highlight.css  prims.css  pygments.css
